Show shop UI by removing hidden class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         
         <!-- Shop UI (hidden initially) -->
-        <div id="shop" class="shop hidden">
+        <div id="shop" class="shop">
             <h2>Shadow Armory</h2>
             <p>Points: <span id="shopScore">0</span></p>
             <div class="items">
