--- a/index.html
+++ b/index.html
@@ -79,5 +79,26 @@
     </div>
     
     <script src="script.js"></script>
+    <div class="container">
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+
+    <!-- HUD INSIDE -->
+    <div id="hud" class="hud"> ... </div>
+
+    <!-- Level Progress Bar -->
+    <div id="levelBar" class="progress-bar"> ... </div>
+
+    <!-- Health Bar -->
+    <div class="health-bar"> ... </div>
+
+    <!-- Hotbar -->
+    <div id="hotbar" class="hotbar"> ... </div>
+
+    <!-- Shop, GameOver, PauseMenu -->
+    <div id="shop" class="shop"> ... </div>
+    <div id="gameOver" class="overlay hidden"> ... </div>
+    <div id="pauseMenu" class="overlay hidden"> ... </div>
+    <div id="settings" class="overlay hidden"> ... </div>
+</div>
 </body>
 </html>
