--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ninja Ball Annihilator - Ultimate</title>
+    <title>Ninja Ball Annihilator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <canvas id="gameCanvas" width="800" height="600"></canvas>
-        
+
         <!-- HUD -->
         <div id="hud" class="hud">
-            <div class="stats">
-                <span>Level: <span id="level">1</span></span>
-                <span>Score: <span id="score">0</span></span>
-                <span>Wave: <span id="wave">1</span></span>
-                <span>Health: <span id="health">100</span>%</span>
-            </div>
-            <div class="weapon">Weapon: <span id="weapon">Sword</span></div>
+            Level: <span id="level">1</span> |
+            Score: <span id="score">0</span> |
+            Wave: <span id="wave">1</span> |
+            Health: <span id="health">100</span>% |
+            Weapon: <span id="weapon">Sword</span>
         </div>
 
         <!-- Level Progress Bar -->
@@ -32,25 +30,23 @@
             <div class="health-fill" id="healthFill"></div>
         </div>
 
-        <!-- Hotbar (Bottom) -->
+        <!-- Hotbar -->
         <div id="hotbar" class="hotbar">
             <div class="hotkey" data-weapon="sword">1</div>
             <div class="hotkey" data-weapon="pistol">2</div>
             <div class="hotkey" data-weapon="shotgun">3</div>
             <div class="hotkey" data-weapon="laser">4</div>
-            <div class="powerups" id="powerupsUI"></div>
+            <div id="powerupsUI"></div>
         </div>
 
-        <!-- Shop UI -->
-        <div id="shop" class="shop hidden">
+        <!-- Shop -->
+        <div id="shop" class="shop">
             <h2>Shadow Armory</h2>
             <p>Points: <span id="shopScore">0</span></p>
-            <div class="items">
-                <button class="item" data-weapon="sword" data-cost="0">Sword (Free)</button>
-                <button class="item" data-weapon="pistol" data-cost="50">Pistol (+50 dmg, $50)</button>
-                <button class="item" data-weapon="shotgun" data-cost="150">Shotgun (AOE, $150)</button>
-                <button class="item" data-weapon="laser" data-cost="300">Laser (Pierce, $300)</button>
-            </div>
+            <button class="item" data-weapon="sword" data-cost="0">Sword (Free)</button>
+            <button class="item" data-weapon="pistol" data-cost="50">Pistol (+50 dmg, $50)</button>
+            <button class="item" data-weapon="shotgun" data-cost="150">Shotgun (AOE, $150)</button>
+            <button class="item" data-weapon="laser" data-cost="300">Laser (Pierce, $300)</button>
             <button id="startBtn">Enter Shadows</button>
         </div>
 
@@ -61,44 +57,15 @@
             <button id="restartBtn">Reborn</button>
         </div>
 
-        <!-- Pause Menu (ESC) -->
+        <!-- Pause Menu -->
         <div id="pauseMenu" class="overlay hidden">
             <h2>Shadow Menu</h2>
-            <button id="settingsBtn">Settings</button>
+            <button id="resumeBtn">Resume</button>
             <button id="saveBtn">Save Progress</button>
             <button id="leaveBtn">Leave Game</button>
-            <button id="resumeBtn">Resume</button>
-        </div>
-
-        <!-- Settings (Simple - volume toggle later) -->
-        <div id="settings" class="overlay hidden">
-            <h2>Settings</h2>
-            <p>More coming soon...</p>
-            <button id="backBtn">Back</button>
         </div>
     </div>
-    
+
     <script src="script.js"></script>
-    <div class="container">
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-
-    <!-- HUD INSIDE -->
-    <div id="hud" class="hud"> ... </div>
-
-    <!-- Level Progress Bar -->
-    <div id="levelBar" class="progress-bar"> ... </div>
-
-    <!-- Health Bar -->
-    <div class="health-bar"> ... </div>
-
-    <!-- Hotbar -->
-    <div id="hotbar" class="hotbar"> ... </div>
-
-    <!-- Shop, GameOver, PauseMenu -->
-    <div id="shop" class="shop"> ... </div>
-    <div id="gameOver" class="overlay hidden"> ... </div>
-    <div id="pauseMenu" class="overlay hidden"> ... </div>
-    <div id="settings" class="overlay hidden"> ... </div>
-</div>
 </body>
 </html>
